# payment-service/src/main/java/ru/yandex/practicum/payment/controller/GlobalExceptionHandler.java
@@ -1,0 +1,25 @@
+package ru.yandex.practicum.payment.controller;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.RestControllerAdvice;
+import ru.yandex.practicum.payment.dto.ErrorResponse;
+import ru.yandex.practicum.payment.exception.AccountNotFoundException;
+import ru.yandex.practicum.payment.exception.InsufficientFundsException;
+
+@RestControllerAdvice
+public class GlobalExceptionHandler {
+
+    @ExceptionHandler(AccountNotFoundException.class)
+    public ResponseEntity<ErrorResponse> handleAccountNotFound(AccountNotFoundException e) {
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .body(new ErrorResponse(ErrorResponse.CodeEnum.ACCOUNT_NOT_FOUND, e.getMessage()));
+    }
+
+    @ExceptionHandler(InsufficientFundsException.class)
+    public ResponseEntity<ErrorResponse> handleInsufficientFunds(InsufficientFundsException e) {
+        return ResponseEntity.status(HttpStatus.UNPROCESSABLE_CONTENT)
+                .body(new ErrorResponse(ErrorResponse.CodeEnum.INSUFFICIENT_FUNDS, e.getMessage()));
+    }
+}
